5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/2360/executions/1578_996.log
== SUBMITION (2019-03-22 20:14:04) 
-- CODE:
print(" **** ")
print("* o o *")
print("   ^ ")
print(" ")
print(" ")
-- EXECUTION TIME:
0.18361
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
**** 
* o o *
   ^
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:15:36) 
-- CODE:
print("****")
print("*o o*")
print("* ^ *")
print("*---*")
print("*****")
-- EXECUTION TIME:
0.155753
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
****
*o o*
* ^ *
*---*
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:15:39) 
-- CODE:
print("****")
print("*o o*")
print("* ^ *")
print("*---*")
print("*****")
-- EXECUTION TIME:
0.164889
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
****
*o o*
* ^ *
*---*
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:16:12) 
-- CODE:
print(" **** ")
print(" *o o* ")
print(" * ^ * ")
print(" *---* ")
print(" ***** ")
-- EXECUTION TIME:
0.171054
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
**** 
 *o o* 
 * ^ * 
 *---* 
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:16:38) 
-- CODE:
print(" **** ")
print(" (*o o*) ")
print(" * ^ * ")
print(" *---* ")
print(" ***** ")
-- EXECUTION TIME:
0.190486
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
**** 
 (*o o*) 
 * ^ * 
 *---* 
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:16:52) 
-- CODE:
print(" **** ")

-- EXECUTION TIME:
0.277394
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:16:52) 
-- CODE:
print(" **** ")

-- EXECUTION TIME:
0.275089
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:16:53) 
-- CODE:
print(" **** ")

-- EXECUTION TIME:
0.191967
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:16:57) 
-- CODE:
print("****")

-- EXECUTION TIME:
0.136055
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:16:59) 
-- CODE:
print("****")

-- EXECUTION TIME:
0.181107
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:16:59) 
-- CODE:
print("****")

-- EXECUTION TIME:
0.14645
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:16:59) 
-- CODE:
print("****")

-- EXECUTION TIME:
0.0894029
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:16:59) 
-- CODE:
print("****")

-- EXECUTION TIME:
0.106288
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:17:00) 
-- CODE:
print("****")

-- EXECUTION TIME:
0.169494
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:17:00) 
-- CODE:
print("****")

-- EXECUTION TIME:
0.100889
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1578/996/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:17:00) 
-- CODE:
print("****")

-- EXECUTION TIME:
0.178237
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:17:00) 
-- CODE:
print("****")

-- EXECUTION TIME:
0.15724
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:17:01) 
-- CODE:
print("****")

-- EXECUTION TIME:
0.099757
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:17:01) 
-- CODE:
print("****")

-- EXECUTION TIME:
0.109753
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:17:01) 
-- CODE:
print("****")

-- EXECUTION TIME:
0.124886
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:17:02) 
-- CODE:
print("****")

-- EXECUTION TIME:
0.152051
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:17:02) 
-- CODE:
print("****")

-- EXECUTION TIME:
0.138506
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:17:02) 
-- CODE:
print("****")

-- EXECUTION TIME:
0.149595
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:17:02) 
-- CODE:
print("****")

-- EXECUTION TIME:
0.086082
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1578/996/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:17:02) 
-- CODE:
print("****")

-- EXECUTION TIME:
0.085747
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:17:04) 
-- CODE:
print("****")

-- EXECUTION TIME:
0.28082
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:02:38) 
-- CODE:
print(" ***** ")
print((* o o *))

-- EXECUTION TIME:
0.16085
-- ERROR:
  File "/home/codebench/codes/1578/996/main.py", line 2
    print((* o o *))
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:02:39) 
-- CODE:
print(" ***** ")
print((* o o *))

-- EXECUTION TIME:
0.149958
-- ERROR:
  File "/home/codebench/codes/1578/996/main.py", line 2
    print((* o o *))
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:02:47) 
-- CODE:
print(" ***** ")
print(( * o o * ))

-- EXECUTION TIME:
0.163228
-- ERROR:
  File "/home/codebench/codes/1578/996/main.py", line 2
    print(( * o o * ))
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:03:36) 
-- CODE:
print(" ***** ")
print("(* o o *)")

-- EXECUTION TIME:
0.168706
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
(* o o *)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:04:31) 
-- CODE:
print(" ***** ")
print("(* o o *)")

-- OUTPUT:
***** 
(* o o *)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:04:54) 
-- CODE:
print( " ***** " )
print("(* o o *)")

-- OUTPUT:
***** 
(* o o *)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:05:45) 
-- CODE:
print(" ***** ")

-- EXECUTION TIME:
0.138781
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:05:47) 
-- CODE:
print(" ***** ")

-- OUTPUT:
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:05:56) 
-- CODE:
print( " ***** " )

-- EXECUTION TIME:
0.212202
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:06:08) 
-- CODE:
print("*****")

-- EXECUTION TIME:
0.1387
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:06:09) 
-- CODE:
print("*****")

-- EXECUTION TIME:
0.204171
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:06:09) 
-- CODE:
print("*****")

-- OUTPUT:
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:06:09) 
-- CODE:
print("*****")

-- EXECUTION TIME:
0.147203
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:06:27) 
-- CODE:
print(" ***** ")

-- EXECUTION TIME:
0.187247
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:06:42) 
-- CODE:
print(" ***** ")

-- EXECUTION TIME:
0.229071
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:06:42) 
-- CODE:
print(" ***** ")

-- EXECUTION TIME:
0.179924
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:06:43) 
-- CODE:
print(" ***** ")

-- EXECUTION TIME:
0.103195
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:06:43) 
-- CODE:
print(" ***** ")

-- OUTPUT:
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:07:16) 
-- CODE:
print(" ***** ")
print("(* o o *)")

-- OUTPUT:
***** 
(* o o *)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:07:50) 
-- CODE:
print(" ***** ")
print("(* o o *)")
print("* ^ *")

-- OUTPUT:
***** 
(* o o *)
* ^ *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:08:28) 
-- CODE:
print(" ***** ")
print("(* o o *)")
print("* ^ *")
print("* --- *")
print()

-- OUTPUT:
***** 
(* o o *)
* ^ *
* --- *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:08:49) 
-- CODE:
print(" ***** ")
print("(* o o *)")
print("* ^ *")
print("* --- *")
print(" ***** ")

-- EXECUTION TIME:
0.154505
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
(* o o *)
* ^ *
* --- *
 *****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
